probleme alignement collapsible fixed

--- a/src/components/collapsible/Collapsible.scss
+++ b/src/components/collapsible/Collapsible.scss
@@ -34,17 +34,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     background-color: $primary;
     color: white;
     margin: auto;
 }
 
 .collapsibleContentBig {
-    width: 96%;
-    height: 78px;
-    padding: 20px;
+    width: 95%;
+    height: fit-content;
     border-radius: 5px;
     background-color: #F6F6F6;
     color: $primary;
@@ -54,6 +52,8 @@
     overflow: scroll;
     display: flex;
     align-items: center;
+    padding: 20px;
+    margin: auto;
 }
 
 li{
